[package]
name = "avalanche-client"
edition = "2023"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "network", "crypto" ]

# Note that the network and crypto dependencies are only temporarily locally referenced
# until we get the changes we made merged and published to the corresponding crates
[dependencies]
network = { path = "network" }
crypto = { path = "crypto" }
avalanche-types = { version = "0.1.4", features = ["message", "proto"] }
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
mio = "0.8.8"
hex = "0.4.3"
cert-manager = "0.0.10"
rustls = { version = "0.21.7", features = ["logging", "dangerous_configuration"]}
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
