[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-types = { version = "0.1.4", features = ["message", "proto"] }
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
mio = "0.8.8"
hex = "0.4.3"
cert-manager = "0.0.10"
rustls = { version = "0.21.7", features = ["logging", "dangerous_configuration"]}
x509-certificate = "0.21.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rcgen = "0.10.0"
random-manager = "0.0.5"
prost = "0.11.9"
zstd = "0.13.0"
thiserror = "1.0.49"
ring = { version = "0.17.2", features = ["std"] }
once_cell = "1.18.0"
